2006-06-19  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: now you can choose 'min'imum or 'max'imum intensity projection directly in get_mips.

2006-05-22  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2avi.m: removed an experimental change to the code (committed by mistake).

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: fixed error when end_frame wasn't defined.  Now it sets end_frame to the number of frames in the raw file.

2006-04-03  Jeremy Cribb <jcribb@email.unc.edu>
	* video_psd.m: added.  inputs video tracking data and attaches psd info to structure.
	* raw2avi.m: updated some documentation.  mainly playing around with video codecs for video compression.
	
2005-12-14  Jeremy Cribb <jcribb@email.unc.edu>
	* raw2img.m: added stride parameter.
	* raw_balance_gain.m: for a raw video, this balances the gain values for both channels in each pulnix raw image and saves a new raw file.
	* raw_swaplines.m: for a raw video, this corrects the swapped lines problem for each frame.  This follows the same algorithm in gluitake.

2005-12-05  Jeremy Cribb <jcribb@email.unc.edu>
	* get_mips.m: added start and stop frames to parameter list.

2005-11-16  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: fixed an off-by-one bug that would break code whenever capturing intensity projections with a stride of 1.

2005-11-15   Jeremy Cribb <jcribb@email.unc.edu>
	* raw_mean_subtract.m added. performs mean subtraction from a .raw file and saves a new .raw file

2005-11-15  Jeremy Cribb <jcribb@email.unc.edu>
	* enhance_contrast.m: added. increases gain for pulnix .raw files and saves a new .raw file.  maximum pixel value is set to 1 (255).

2005-11-01  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: added mean projection image as a mode.

2005-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	* mip.m: adjusted output so that if an output variable is defined, the MIP is outputted as a 2D matrix, otherwise it just displays an image of the MIP.
