@@ -1,3 +1,6 @@
+2006-06-22  Jeremy Cribb <jcribb@email.unc.edu>
+	* clipraw.m:  added cropping functionality.  added variable output to available memory or to a file.  There is no way to put the position into the rawfile format so crop at your own risk.
+
 2006-06-19  Jeremy Cribb <jcribb@email.unc.edu>
 	* get_mips.m: now you can choose 'min'imum or 'max'imum intensity projection directly in get_mips.
 
